unpackaged/main/default/objects/Billing_Invoice__c/Billing_Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoices generated for diffrent billing systems</description>
    <label>Billing Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>