unpackaged/main/default/objects/Billing_Invoice__c/fields/Billing_System_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_Invoice_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Record ID from Billing system</inlineHelpText>
    <label>Billing System Invoice ID</label>
    <length>75</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>