unpackaged/main/default/objects/Billing_Invoice__c/fields/Download_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Download_Invoice__c</fullName>
    <description>Generates download of Zuora invoice if user has Zuora access</description>
    <formula>IF( 

OR( Invoice_URL__c = &quot;&quot;, TEXT(Billing_System__c) != &quot;Zuora-MC&quot; ), &quot;N/A&quot;,

HYPERLINK( IF( $Organization.Id = &quot;00D8W000004LZHl&quot;, &quot;https://na.zuora.com/apps&quot;, &quot;https://sandbox.na.zuora.com/apps&quot;)&amp; Invoice_URL__c, &quot;Download&quot; )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Zuora access needed to download invoice</inlineHelpText>
    <label>Download Invoice</label>
    <type>Text</type>
</CustomField>