unpackaged/main/default/objects/Billing_Invoice__c/fields/Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_URL__c</fullName>
    <description>Link to download invoice from billing system</description>
    <label>Invoice URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>