unpackaged/main/default/objects/Billing_Invoice__c/fields/Posted_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_On_Date__c</fullName>
    <label>Posted On Date</label>
    <type>Date</type>
</CustomField>