unpackaged/main/default/objects/Billing_Invoice__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>