unpackaged/main/default/objects/Billing_Invoice__c/fields/Tax_Exempt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Amount__c</fullName>
    <label>Tax Exempt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>